<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>uon_3f_gripper</name>
  <version>0.0.0</version>
  <description>Python ROS 2 package for a Dynamixel-based UON three-finger gripper.</description>
  <maintainer email="jusik@example.com">jusik</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>control_msgs</exec_depend>
  <exec_depend>ament_index_python</exec_depend>

  <exec_depend>python3-serial</exec_depend>
  <exec_depend>dynamixel_sdk</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
